fixed background gradient stretch

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
-html {
-    height: 100%;
-}
+/* html {
+    height: fit-content;
+} */
 
 body {
     /* background: #312244; */
     background: rgb(0, 100, 102);
     background: linear-gradient(0deg, rgba(0, 100, 102, 1) 0%, rgba(33, 47, 69, 1) 35%, rgba(77, 25, 77, 1) 100%);
+    background-size: cover;
     font-family: "Play", sans-serif;
     ;
 }
